--- a/PSM Project.ipynb
+++ b/PSM Project.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# Loading Data\n",
-    "df = pd.read_csv('/Users/indrakaran_varikuti/Downloads/adult-all.csv',header=None)"
+    "df = pd.read_csv('adult-all.csv',header=None)"
    ]
   },
   {
